- Hotfix height logo on collapse menu [SOLVED]

--- a/Resources/assets/sass/front/layout.scss
+++ b/Resources/assets/sass/front/layout.scss
@@ -514,6 +514,9 @@ body {
                 width: 90%;
             }
         }
+        &.collapsed{
+            height: unset;
+        }
     }
     .container-user {
         text-align: center;
